# PRISM

./: .gitignore  README.md  pyproject.toml
configs/collection/: default_online.yaml  hsv_tuned.yaml
configs/devices/: charuco_4cam_result.json  d435_charuco_intrinsics.json
data/processed/: .gitkeep
docs/: HARDWARE_TRIGGER_CALIBRATION_GUIDE.md  QUICK_START_HARDWARE_TRIGGER.md
scripts/: analyze_trajectory.sh  collect_task.sh  rebuild_aligned_segment.sh
src/prism/: __init__.py
src/prism/cli/: __init__.py  collect.py  hand_control.py
src/prism/common/: __init__.py  config.py  console.py  timebase.py
src/prism/devices/: __init__.py
src/prism/devices/cameras/: __init__.py  highspeed_camera.py  mvs_camera.py  realsense_camera.py
src/prism/devices/hand/: __init__.py  socket_client.py
src/prism/devices/rpi/: __init__.py  io_interface.py  restart_order.md
src/prism/online/: __init__.py  display_server.py  preview_backend.py  session_manager.py  trajectory_plotter.py
src/prism/processing/: __init__.py  led_accuracy.py  offline_rebuild.py  offline_reconstruct.py  trajectory_analyzer.py
src/prism/reconstruction/: __init__.py  calibration.py  realtime_reconstruction.py
src/prism/recording/: __init__.py  metadata_writer.py  temporal_calibration.py  video_recorder.py
tools/: calibrate_hsv_led.py  calibrate_temporal_delay.py  eval_led_accuracy.py  isaacsim_replay.py  prism_charuco_calibration_capture.py
